# delta_delivery_service

./: Makefile  README.md  alembic.ini  pyproject.toml
src/delivery_service/application/: exceptions.py
src/delivery_service/application/dto/: box.py
src/delivery_service/application/repositories/: box_repository.py  box_type_repository.py
src/delivery_service/application/use_cases/: get_box.py  get_box_types.py  get_user_boxes.py  register_box.py
src/delivery_service/domain/: exceptions.py
src/delivery_service/domain/entities/: box.py  box_type.py
src/delivery_service/domain/interfaces/: delivery_price_calculator.py
src/delivery_service/domain/services/: default_price_calculator.py
src/delivery_service/domain/value_objects/: box_id.py  box_weight.py
src/delivery_service/entrypoints/: fastapi.py  rabbitmq.py
src/delivery_service/infrastructure/logger/: factory.py
src/delivery_service/infrastructure/rabbitmq/: consumer.py  producer.py
src/delivery_service/infrastructure/sqlalchemy/: database.py  unit_of_work.py
src/delivery_service/infrastructure/sqlalchemy/migrations/: env.py
src/delivery_service/infrastructure/sqlalchemy/models/: __init__.py  box.py  box_type.py
src/delivery_service/infrastructure/sqlalchemy/repositories/: box.py  (+3 more)
src/delivery_service/presentation/: exceptions.py
src/delivery_service/presentation/dependencies/: base.py  box.py
src/delivery_service/presentation/mappers/: box.py
src/delivery_service/presentation/routes/: boxes.py
src/delivery_service/presentation/schemas/: box.py  box_type.py  register_box.py
(+1 files in other folders)
