[tool.poetry]
name = "delivery_service"
version = "0.1.0"
description = "Box delivery service"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
sqlalchemy = "^2.0.27"
alembic = "^1.13.1"
pymysql = "^1.1.0"
asyncmy = "^0.2.8"
pydantic = "^2.6.1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.1"
aio-pika = "^9.3.0"
redis = "^5.0.1"
httpx = "^0.26.0"
cryptography = "^42.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint]
ignore = ["E501"]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.12"
exclude = "migrations"
strict = true
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_unused_ignores = true
warn_return_any = true
warn_unused_configs = true
warn_unreachable = true
allow_redefinition = true
disallow_subclassing_any = false